examples/invalid/redeclarations/redeclarationType.vbr
chord A {
    value: whole
}

chord A {
    v: quarter
}

moderato() {
    a: A <-> A(maj)|
}